# hackathon-semcomp-2024

./: README.md  docker-compose.yml  init_db.py  novarumApp.py  pyproject.toml  wsgi.py
conf/: .env.example  novarumApp.env
data/: lactação.csv
flaskr/: llm.py  novarumApp.py  wsgi.py
flaskr/templates/: base.html  index.html
flaskr/templates/rules/: graphs_page.html  rules_table.html  violations_page.html
init/: init.sql
notebooks/: Lactação.ipynb  Pipeline.ipynb  Query.ipynb  Testes_Sqlfluff.ipynb
templates/database/: database_table.html
templates/rules/: rules_table.html
